<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_txt">Glide - Image Building library by BumpTech</string>
    <string name="load_app_txt">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_txt">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="file_name">File name:</string>
    <string name="download_status">Download status:</string>
    <string name="okay">Okay</string>
</resources>
