<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/download_scene">


    <TextView
        android:id="@+id/file_lbl"
        android:layout_width="wrap_content"
        android:text="@string/file_name"
        android:layout_marginEnd="4dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/download_status_lbl"
        android:layout_width="0dp"
        android:text="@string/download_status"
        android:layout_marginEnd="4dp"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/download_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <Button
        android:id="@+id/okay_btn"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/okay"/>

</androidx.constraintlayout.motion.widget.MotionLayout>