<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ImageView
        android:id="@+id/cloud_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintBottom_toTopOf="@+id/radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/download_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/glide_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_txt" />

        <RadioButton
            android:id="@+id/load_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/load_app_txt" />

        <RadioButton
            android:id="@+id/retrofit_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_txt" />


    </RadioGroup>


    <com.udacity.LoadingButton
        android:id="@+id/download_btn"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        app:animColor="@color/colorPrimary"
        app:arcColor="@color/white"
        app:btnBgColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
      />



</androidx.constraintlayout.widget.ConstraintLayout>